# worldql_server

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  view_documentation.sh  worldql_server.Dockerfile
.github/workflows/: build.yml  docker.yml
examples/: test-zmq.rs  test-zmq2.rs
src/: WorldQLFB_generated.rs  args.rs  connected_client.rs  constants.rs  main.rs  outgoing_zeromq_owner.rs  structures.rs  vec3d.rs  worldql_instruction.rs  zmq_main_server.rs
src/database/: client.rs  init.rs  mod.rs  navigation.rs  query_const.rs  query_constants.rs  world_region.rs
src/flatbuffers/: WorldQLFB_generated.rs  mod.rs
src/generated_flatbuffer/: mod.rs
src/generated_flatbuffer/worldql_fb/messages/: entity_generated.rs  message_generated.rs  record_generated.rs  vec_3d_generated.rs
src/processing/: area_subscribe.rs  area_unsubscribe.rs  global_message.rs  heartbeat.rs  local_message.rs  mod.rs  record_create.rs  record_delete.rs  record_read.rs  thread.rs
src/structures/: codec.rs  entity.rs  instruction.rs  message.rs  mod.rs  record.rs  replication.rs  vec3d.rs  vector3.rs
src/subscriptions/: area_map.rs  cube_area.rs  mod.rs  to_cube_area.rs  world_map.rs
src/transport/: mod.rs  peer.rs  peer_map.rs  processing.rs  websocket.rs  zeromq.rs  zeromq_incoming.rs  zeromq_outgoing.rs
src/transport/http/: http_rest.rs  mod.rs  websocket.rs
src/transport/zeromq/: incoming.rs  mod.rs
src/utils/: floor_multiple.rs  mod.rs  packet_trace.rs  port_range.rs  round.rs  time.rs  trace_packet.rs
worldql_messages/: Cargo.toml
worldql_messages/src/: lib.rs  macros.rs
worldql_messages/src/client_bound/: error.rs  mod.rs
worldql_messages/src/client_bound/event/: global_message_event.rs  local_message_event.rs  mod.rs  peer_disconnect_event.rs  system_message.rs
worldql_messages/src/client_bound/reply/: area_subscribe_reply.rs  area_unsubscribe_reply.rs  handshake_reply.rs  heartbeat_reply.rs  mod.rs  record_clear_reply.rs  record_delete_reply.rs  record_get_reply.rs  record_set_reply.rs  status.rs  world_subscribe_reply.rs  world_unsubscribe_reply.rs
worldql_messages/src/common/: mod.rs  record.rs  replication.rs  vector3.rs
worldql_messages/src/incoming/: area_subscribe_request.rs  area_unsubscribe_request.rs  global_message_request.rs  handshake_request.rs  heartbeat_request.rs  local_message_request.rs  mod.rs  record_clear_request.rs  record_delete_request.rs  record_get_request.rs  record_set_request.rs  world_subscribe_request.rs  world_unsubscribe_request.rs
worldql_messages/src/outgoing/: error.rs  mod.rs
worldql_messages/src/outgoing/event/: global_message_event.rs  local_message_event.rs  mod.rs  peer_connect_event.rs  peer_disconnect_event.rs  system_message.rs
worldql_messages/src/outgoing/reply/: area_subscribe_reply.rs  area_unsubscribe_reply.rs  handshake_reply.rs  heartbeat_reply.rs  mod.rs  record_clear_reply.rs  record_delete_reply.rs  record_get_reply.rs  record_set_reply.rs  status.rs  world_subscribe_reply.rs  world_unsubscribe_reply.rs
worldql_messages/src/serialization/: json.rs  mod.rs  msgpack.rs
worldql_messages/src/server_bound/: area_subscribe_request.rs  area_unsubscribe_request.rs  global_message_request.rs  handshake_request.rs  heartbeat_request.rs  local_message_request.rs  mod.rs  record_clear_request.rs  record_delete_request.rs  record_get_request.rs  record_set_request.rs  world_subscribe_request.rs  world_unsubscribe_request.rs
worldql_server/: Cargo.toml  build.rs
worldql_server/src/: args.rs  errors.rs  main.rs
worldql_server/src/database/: client.rs  error.rs  init.rs  mod.rs  navigation.rs  sql_record.rs  world_region.rs
worldql_server/src/flatbuffers/: WorldQLFB_generated.rs
worldql_server/src/processing/: area_subscribe.rs  area_unsubscribe.rs  global_message.rs  handler.rs  heartbeat.rs  local_message.rs  mod.rs  record_clear.rs  record_delete.rs  record_get.rs  record_set.rs  thread.rs  world_subscribe.rs  world_unsubscribe.rs
worldql_server/src/processing_old/: record_create.rs
worldql_server/src/structures/: instruction.rs  message.rs  mod.rs  record.rs
worldql_server/src/subscriptions/: area_map.rs  cube_area.rs  world_map.rs
worldql_server/src/transport/: auth.rs  errors.rs  mod.rs  peer.rs  peer_map.rs
worldql_server/src/transport/http/: mod.rs
worldql_server/src/transport/websocket/: mod.rs  ws_handler.rs  ws_peer.rs
worldql_server/src/transport/zeromq/: outgoing.rs
worldql_server/src/utils/: mod.rs  rng.rs  trace_packet.rs  world_names.rs
worldql_subscriptions/: Cargo.toml
worldql_subscriptions/src/: area.rs  clamp.rs  lib.rs  manager.rs
