[package]
name = "worldql_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
bytes = "1.1.0"
clap = "3.0.0-beta.5"
color-eyre = "0.5.11"
derive-getters = "0.2.0"
flatbuffers = "2.0.0"
flume = "0.10.9"
futures-util = "0.3.18"
lru = "0.7.0"
once_cell = "1.8.0"
portpicker = "0.1.1"
rand = "0.8.4"
scopeguard = "1.1.0"
thiserror = "1.0.30"
tmq = { version = "0.3.0", optional = true, features = ["zmq-vendored"] }
tokio = { version = "1.14.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["with-uuid-0_8"] }
tokio-tungstenite = { version = "0.16.1", optional = true }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

[features]
default = ["zeromq", "websocket"]
zeromq = ["tmq"]
websocket = ["tokio-tungstenite"]
trace_packets = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
