[package]
name = "worldql_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
axum = { version = "0.4.3", optional = true, features = ["headers"] }
bytes = "1.1.0"
chrono = "0.4.19"
clap = { version = "3.0.0", features = ["derive", "env"] }
color-eyre = "0.5.11"
derive-getters = "0.2.0"
dotenv = "0.15.0"
flatbuffers = "2.0.0"
flume = "0.10.9"
futures-util = "0.3.19"
lru = "0.7.2"
once_cell = "1.9.0"
portpicker = "0.1.1"
rand = "0.8.4"
scopeguard = "1.1.0"
serde = { version = "1.0.133", optional = true, features = ["derive"] }
thiserror = "1.0.30"
tmq = { version = "0.3.0", optional = true, features = ["zmq-vendored"] }
tokio = { version = "1.15.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["with-uuid-0_8", "with-chrono-0_4"] }
tokio-tungstenite = { version = "0.16.1", optional = true }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

[features]
default = ["http", "websocket", "zeromq"]
http = ["axum", "serde"]
websocket = ["tokio-tungstenite"]
zeromq = ["tmq"]
trace_packets = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
