[workspace]

members = [
  "worldql_messages",
  "worldql_server",
  "worldql_subscriptions",
]

[profile.release.package.worldql_server]
opt-level = 3
codegen-units = 1

[profile.release.package.worldql_messages]
opt-level = 3
codegen-units = 1

[profile.release.package.worldql_subscriptions]
opt-level = 3
codegen-units = 1
