[package]
name = "worldql_messages"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
bytes = { version = "1.1.0", features = ["serde"] }
paste = "1.0.6"
rmp-serde = { version = "1.0.0", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[features]
default = ["json", "msgpack"]
json = ["serde_json"]
msgpack = ["rmp-serde"]
