[package]
name = "worldql_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
ahash = "0.7.6"
async-trait = "0.1.52"
axum = { version = "0.4.5", optional = true, features = ["headers"] }
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
clap = { version = "3.1.0", features = ["derive", "env"] }
color-eyre = "0.6.0"
dotenv = "0.15.0"
flume = "0.10.11"
futures-util = "0.3.21"
lru = "0.7.2"
once_cell = "1.9.0"
portpicker = "0.1.1"
rand = "0.8.5"
scopeguard = "1.1.0"
sea-query = { version = "0.21.0", features = ["sqlx-postgres", "with-uuid"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
sqlx = { version = "0.5.11", features = ["postgres", "runtime-tokio-rustls", "uuid", "tls"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.0", optional = true }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }
worldql_messages = { path = "../worldql_messages", default-features = false, features = ["msgpack"] }
worldql_subscriptions = { path = "../worldql_subscriptions" }

[features]
default = ["websocket"]
http = ["axum", "serde"]
websocket = ["tokio-tungstenite"]
trace_packets = []
